# google-photo-meta-fixer

./: .gitignore  22v2-jitesh.csv  GEMINI.md  JSON_MERGER.md  LEARNING.md  LICENSE  README.md  Sept21.csv  T2-hiijitesh.csv  T4-v2-metadata.csv  TakeoutHelper_Guide.md  Trash-hiijitesh.csv  Trash_v2_with_blur_pics_metadata.csv  Trash_v3_metadata (2).csv  backup_photos.py  check_timestamps.py  cleaner.py  cli_reference_guide.md  copy_og_files.py  copy_to_specific_folder.py  copy_trash_files.py  copy_trash_files_by_size.py  find_og_files.py  fix_local_timestamps.py  fix_unmatched_timestamps.py  found_in_drive_matches.json  generate_unmatched_csv.py  google_photos_toolkit.user.js  implementation_plan_google photos.md  jitesh-storage-saver-sorted.csv  jitesh-storage-saver.csv  json merger walkthrough.md  media_filter.txt  merge_recovered_trash.sh  metadata.csv  missing_files.txt  missing_files_og.txt  missing_files_specific_folder.txt  missing_files_trash_size_match.txt  my_new_export.csv  (+35 more)
android-app/: App.js  app.json  package-lock.json  package.json
docs/: Metadata_Timestamp_Guide.md  Pixel_Reupload_Guide.md  TakeoutHelper_README.md
scripts/: backup_photos.py  check_timestamps.py  copy_og_files.py  copy_to_specific_folder.py  copy_trash_files.py  copy_trash_files_by_size.py  extract_photos.js  find_og_files.py  fix_local_timestamps.py  fix_unmatched_timestamps.py  generate_unmatched_csv.py  process_trashed_photos.py  run_backup.sh  run_backup_og.sh  run_backup_trash.sh  run_copy_to_specific_folder.sh  run_copy_trash.sh  run_upload_trash.sh
src/: __init__.py  bind_motion.py  logger.py  metadata.py  process_backup.py  process_trash.py  (+3 more)
(+8 files in other folders)
