[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-photo-meta-fixer"
version = "1.0.0"
description = "CLI toolkit to audit, restore, and sync Google Photos metadata without re-uploading payloads"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.scripts]
gp-cleaner = "cleaner:main"

[tool.setuptools]
py-modules = ["cleaner"]
packages = ["src"]

[tool.pyright]
extraPaths = ["."]

[tool.ruff]
src = ["."]

